# elephantasm-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
elephantasm_mcp/: __init__.py  client.py  config.py  resources.py  server.py  tools.py
tests/: test_config.py
