[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elephantasm-mcp"
version = "0.1.0"
description = "MCP server for Elephantasm Long-Term Agentic Memory — plug-and-play memory for any AI agent"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Elephantasm", email = "dev@elephantasm.com" }
]
keywords = [
    "ai",
    "agents",
    "memory",
    "mcp",
    "model-context-protocol",
    "llm",
    "long-term-memory",
    "agentic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://elephantasm.com"
Documentation = "https://elephantasm.com/docs/mcp"
Repository = "https://github.com/kaminocorp/elephantasm-mcp"

[project.scripts]
elephantasm-mcp = "elephantasm_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["elephantasm_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
